--- a/src/App.css
+++ b/src/App.css
@@ -91,3 +91,16 @@ a {
     font-size: 1.25rem;
   }
 }
+
+/* ==========================================
+   APP STYLES
+   ========================================== */
+
+.app {
+  min-height: 100vh;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
