--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -53,6 +53,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @media (max-width: 768px) {
+  padding: 0;
+  }
 }
 
 .brand-logo {
@@ -80,6 +84,12 @@
   padding: 0;
   display: flex;
   gap: 2rem;
+
+  @media (max-width: 768px) {
+    gap: 1rem;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 .navigation li {
