--- a/src/pages/Home/sections/Banner/Banner.module.css
+++ b/src/pages/Home/sections/Banner/Banner.module.css
@@ -1,43 +1,44 @@
 .bannerContainer {
-    position: relative;
-    width: 100%;
-    height: 500px;
+  position: relative;
+  width: 100%;
+  height: 500px;
+}
+
+.bannerContainer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
+}
+
+.bannerContent {
+  position: absolute;
+  top: 20%;
+  left: 10%;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 20px 60px;
+  border-radius: 10px;
+  border: 1px solid #000;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  color: #fff;
+  text-align: left;
+  max-width: 600px;
+
+  @media (max-width: 768px) {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    max-width: 100%;
+    padding: 20px 20px;
   }
-  
-  .bannerContainer img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .bannerContent {
-    position: absolute;
-    top: 20%;
-    left: 10%;
-    background-color: rgba(255, 255, 255, 0.1);
-    padding: 20px 60px;
-    border-radius: 10px;
-    border: 1px solid #000;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-    color: #fff;
-    text-align: left;
-    max-width: 600px;
-  
-    @media (max-width: 768px) {
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 90%;
-      max-width: 100%;
-      padding: 20px 20px;
-    }
-  }
-  
-  .bannerContent h2 {
-    color: #fff;
-    font-weight: 600;
-  }
-  
-  .bannerContent p {
-    line-height: 20px;
-  }
+}
+
+.bannerContent h2 {
+  color: #fff;
+  font-weight: 600;
+}
+
+.bannerContent p {
+  line-height: 20px;
+}
