--- a/src/index.css
+++ b/src/index.css
@@ -105,14 +105,9 @@ p {
   line-height: 1.6;
 }
 
-ul,
-ol {
-  margin: 0 0 1rem 0;
-  padding-left: 1.5rem;
-}
-
-li {
-  margin-bottom: 0.5rem;
+ul {
+  margin: 0;
+  list-style: none;
 }
 
 /* ==========================================
