--- a/src/pages/Home/sections/Banner/Banner.module.css
+++ b/src/pages/Home/sections/Banner/Banner.module.css
@@ -1,28 +1,32 @@
 .bannerContainer {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 100%;
 }
 
 .bannerContainer img {
   width: 100%;
-  height: 100%;
+  height: 700px;
   object-fit: cover;
   object-position: top;
+
+  @media (min-width: 1920px) {
+    height: 1000px;
+  }
 }
 
 .bannerContent {
   position: absolute;
-  top: 20%;
-  left: 10%;
-  background-color: rgba(255, 255, 255, 0.1);
-  padding: 20px 60px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(157, 152, 152, 0.5);
+  padding: 20px 40px;
   border-radius: 10px;
-  border: 1px solid #000;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   color: #fff;
   text-align: left;
-  max-width: 600px;
+  max-width: 500px;
 
   @media (max-width: 768px) {
     top: 50%;
