--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: stretch;
   max-width: 1200px;
-  margin: 2rem auto;
+  margin: 0 auto;
   padding: 2rem;
 }
 
@@ -13,4 +13,14 @@
   gap: 5rem;
   width: 100%;
   margin-top: 2rem;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 2rem;
+  }
+}
+
+.contactInfo2 {
+  max-width: 500px;
+  width: 100%;
 }
