--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 html {
   height: 100%;
   font-size: 100%; /* 16px base */
+  scroll-behavior: smooth;
 }
 
 body {
@@ -121,11 +122,7 @@ a {
 }
 
 span.highlight {
-  text-decoration: underline;
-  text-decoration-color: #fcd900;
-  text-underline-offset: 1px;
-  text-decoration-style: solid;
-  text-decoration-thickness: 8px;
+  box-shadow: inset 0 -0.2em 0 #fcd900;
 }
 
 /* ==========================================
