--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: stretch;
   max-width: 1200px;
   margin: 0 auto;
@@ -8,8 +9,6 @@
 }
 
 .contactInfo {
-  display: flex;
-  justify-content: space-around;
   gap: 5rem;
   width: 100%;
   margin-top: 2rem;
@@ -23,4 +22,20 @@
 .contactInfo2 {
   max-width: 500px;
   width: 100%;
+}
+
+.buttonSubmit {
+  background-color: #001e6c;
+  color: #fff;
+  padding: 0.8rem 2rem;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  cursor: pointer;
+  font-weight: bold;
+
+  &:hover {
+    background-color: #2798f5;
+    transition: background-color 0.3s ease;
+  }
 }
