--- a/src/components/CardV1/CardV1.module.css
+++ b/src/components/CardV1/CardV1.module.css
@@ -44,3 +44,15 @@
   color: gray;
   margin-bottom: 0;
 }
+
+.contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 2rem;
+
+  a {
+    cursor: pointer;
+  }
+}
